--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,4 @@
-<mat-toolbar>Movie Rater</mat-toolbar>
-<router-outlet></router-outlet>
+<div class="container">
+  <mat-toolbar>Movie Rater</mat-toolbar>
+  <router-outlet></router-outlet>
+</div>
