--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -1,1 +1,9 @@
-<p>main works!</p>
+<div class="row my-3 mx-3">
+    <div class="col">
+        <app-movie-list></app-movie-list>
+    </div>
+    <div class="col">
+        <app-movie-details></app-movie-details>
+    </div>
+</div>
+
