Client:Type Casting

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <mat-toolbar>Movie Rater</mat-toolbar>
+  <mat-toolbar><i class="fa fa-film pr-2" aria-hidden="true"></i> Movie Rater</mat-toolbar>
   <router-outlet></router-outlet>
 </div>
