--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -1,9 +1,9 @@
 <div class="row my-3 mx-3">
     <div class="col">
-        <app-movie-list></app-movie-list>
+        <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"></app-movie-list>
     </div>
     <div class="col">
-        <app-movie-details></app-movie-details>
+        <app-movie-details [movie]="selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
     </div>
 </div>
 
