--- a/client/src/app/main/movie-list/movie-list.component.html
+++ b/client/src/app/main/movie-list/movie-list.component.html
@@ -1,4 +1,10 @@
-<h4>Movie List</h4>
-<mat-list role="list">
-    <mat-list-item role="listitem" *ngFor="let movie of movies">{{ movie.title }}</mat-list-item>
-</mat-list>
+<mat-card>
+    <mat-card-title>Movie List</mat-card-title>
+    <mat-card-content>
+        <mat-list role="list">
+            <mat-list-item role="listitem" *ngFor="let movie of movies" (click)="movieClicked(movie)">{{ movie.title }}
+                <mat-divider></mat-divider>
+            </mat-list-item>
+        </mat-list>
+    </mat-card-content>
+</mat-card>
