--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -1,9 +1,15 @@
 <div class="row my-3 mx-3">
-    <div class="col">
-        <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"></app-movie-list>
+    <div class="col col-6">
+        <app-movie-list [movies]="movies" 
+            (selectMovie)="selectMovie($event)" 
+            (editedMovie)="editMovie($event)"
+            (deleteMovie)="deleteMovie($event)"
+            (createNewMovie)="createNewMovie()">
+        </app-movie-list>
     </div>
-    <div class="col">
+    <div class="col col-6">
         <app-movie-details [movie]="selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
+        <app-movie-form *ngIf="editedMovie" [movie]="editedMovie" (refreshMovieList)="this.refreshMovieList()"></app-movie-form>
     </div>
 </div>
 
