--- a/client/src/app/main/movie-details/movie-details.component.html
+++ b/client/src/app/main/movie-details/movie-details.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="movie">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
         <div class="card-body">
             <h5 class="card-title">{{movie.title}}</h5>
             
