--- a/client/src/app/main/movie-list/movie-list.component.html
+++ b/client/src/app/main/movie-list/movie-list.component.html
@@ -2,9 +2,16 @@
     <mat-card-title>Movie List</mat-card-title>
     <mat-card-content>
         <mat-list role="list">
-            <mat-list-item role="listitem" *ngFor="let movie of movies" (click)="movieClicked(movie)">{{ movie.title }}
+            <mat-list-item role="listitem" *ngFor="let movie of movies">
+                <!--<mat-icon mat-list-icon>close</mat-icon>-->
+                <h6 (click)="movieClicked(movie)" style="cursor: pointer;">{{ movie.title }}</h6>
+                <div class="pr-2"></div>
+                <fa name="edit" (click)="editMovie(movie)"></fa>
+                <div class="pr-2"></div>
+                <fa name="trash" (click)="delete_Movie(movie)"></fa>
                 <mat-divider></mat-divider>
             </mat-list-item>
         </mat-list>
     </mat-card-content>
+    <button mat-raised-button color="primary" (click)="createANewMovie()">Add New Movie</button>
 </mat-card>
